docs/api/qiskit/0.33/qiskit.pulse.transforms.AlignEquispaced.mdx
---
title: AlignEquispaced (v0.33)
description: API reference for qiskit.pulse.transforms.AlignEquispaced in qiskit v0.33
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.pulse.transforms.AlignEquispaced
---

# AlignEquispaced

<Class id="qiskit.pulse.transforms.AlignEquispaced" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.19/qiskit/pulse/transforms/alignments.py" signature="AlignEquispaced(duration)" modifiers="class">
  Bases: `qiskit.pulse.transforms.alignments.AlignmentKind`

  Align instructions with equispaced interval within a specified duration.

  Instructions played on different channels are also arranged in a sequence. This alignment is convenient to create dynamical decoupling sequences such as PDD.

  Create new equispaced context.

  **Parameters**

  **duration** (`Union`\[`int`, `ParameterExpression`]) – Duration of this context. This should be larger than the schedule duration. If the specified duration is shorter than the schedule duration, no alignment is performed and the input schedule is just returned. This duration can be parametrized.

  ## Methods

  <span id="qiskit-pulse-transforms-alignequispaced-align" />

  ### align

  <Function id="qiskit.pulse.transforms.AlignEquispaced.align" signature="AlignEquispaced.align(schedule)">
    Reallocate instructions according to the policy.

    Only top-level sub-schedules are aligned. If sub-schedules are nested, nested schedules are not recursively aligned.

    **Parameters**

    **schedule** (`Schedule`) – Schedule to align.

    **Return type**

    `Schedule`

    **Returns**

    Schedule with reallocated instructions.
  </Function>

  <span id="qiskit-pulse-transforms-alignequispaced-to-dict" />

  ### to\_dict

  <Function id="qiskit.pulse.transforms.AlignEquispaced.to_dict" signature="AlignEquispaced.to_dict()">
    Returns dictionary to represent this alignment.

    **Return type**

    `Dict`\[`str`, `Any`]
  </Function>

  ## Attributes

  ### duration

  <Attribute id="qiskit.pulse.transforms.AlignEquispaced.duration">
    Return context duration.
  </Attribute>

  ### is\_sequential

  <Attribute id="qiskit.pulse.transforms.AlignEquispaced.is_sequential" attributeValue="True" />
</Class>

